Menu added, error page modified

--- a/views/map_.pug
+++ b/views/map_.pug
@@ -1,4 +1,4 @@
-extends layout.pug
+extends menu
 block content
     #map
     //- #leg_title 
@@ -12,14 +12,14 @@ block content
 
     script(type='text/javascript').
         //- var L = require('leaflet');
-        var map = L.map('map').setView([#{lat},#{lng}], 14);
+        var map = L.map('map').setView([#{items.latMed},#{items.lonMed}], 14);
 
         L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
             attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> &copy; <a href="https://carto.com/attributions">CARTO</a>',
             subdomains: 'abcd',
             maxZoom: 21
         }).addTo(map);
-    each item in items
+    each item in items.points
         script(type='text/javascript').
            
             L.circleMarker([!{item.coordinate}]).addTo(map)
