Admin login and logout, first time setup, reading parameters from config.json, style.css fixed, unused commented codes deleted

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,12 @@
 html, body {
   height: 100%;
-  overflow: hidden;
 }
 #map {
   height: 100%;
+  margin: auto;
 }
 body {
+  overflow: hidden;
   margin:0;
   padding:0px;
   font:14px "Lucida Grande", Helvetica, Arial, sans-serif;
