--- a/views/admin/login.pug
+++ b/views/admin/login.pug
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        title SmartMap login 
+        title SmartCityMap login 
         meta(charset='UTF-8')
         meta(name='viewport', content='width=device-width, initial-scale=1')
         link(rel='icon', type='image/png', href='images/icons/favicon.ico')
@@ -22,11 +22,11 @@ html
         div(class='limiter')
             div(class='container-login100', style='background-image: url("images/img-01.jpg");')
                 div(class='wrap-login100 p-t-190 p-b-30')
-                    form(class='login100-form validate-form', method="post", action="auth")
+                    form(class='login100-form validate-form', method="post", action="admin/auth")
                         div(class='login100-form-avatar')
                             img(src='images/avatar-01.jpg', alt='AVATAR')
 
-                        span(class='login100-form-title p-t-20 p-b-45') SmartMap login
+                        span(class='login100-form-title p-t-20 p-b-45') SmartCityMap login
 
                         div(class='wrap-input100 validate-input m-b-10', data-validate = 'Username is required')
                             input(class='input100', type='text', name='username', placeholder='Username')
