--- a/views/menu.pug
+++ b/views/menu.pug
@@ -2,9 +2,11 @@ extends layout
 
 block menu 
     nav(class="navbar navbar-expand-lg navbar-dark bg-dark")
-        a(class="navbar-brand", href="/") SmartMap 
+        a(class="navbar-brand", href="/") SmartCityMap 
         button(class="navbar-toggler", type="button", data-toggle="collapse", data-target="#navbarNavAltMarkup", aria-controls="navbarNavAltMarkup", aria-expanded="false", aria-label="Toggle navigation")
             span(class="navbar-toggle-icon")
         div(class="collapse navbar-collapse", id="navbarNavAltMarkup")
             div(class="navbar-nav")
                 a(class="nav-item nav-link" href="/admin") Admin
+                if authenticated === true 
+                    a(class="nav-item nav-link" href="/admin/logout") Logout
