--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,3 +38,22 @@ a {
   margin-left:5px;
   top:-1px
 }
+
+/* .page {
+  visibility: hidden;
+  padding: 0 0.5em; 
+}
+
+#loading {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(192, 192, 192, 0.5);
+  background-image: url("https://i.stack.imgur.com/MnyxU.gif");
+  background-repeat: no-repeat;
+  background-position: center;
+} */
