--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,18 +2,39 @@ doctype html
 html
   head
     title= title
+    link(rel='stylesheet', href='/bootstrap/css/bootstrap.css')
     link(rel='stylesheet', href='https://unpkg.com/leaflet@1.2.0/dist/leaflet.css')
     link(rel='stylesheet', href='https://unpkg.com/leaflet@1.7.1/dist/leaflet.css')
     link(rel='stylesheet', href='https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css', integrity='sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF', crossorigin='anonymous')
 
+    script(src='/bootstrap/js/bootstrap.js')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
     script(src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js')
     script(src='https://unpkg.com/leaflet@1.2.0/dist/leaflet.js')
     script(src='https://unpkg.com/leaflet@1.7.1/dist/leaflet.js')
     script(src='https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js', integrity='sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB', crossorigin='anonymous')
-    script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.min.js', integrity='sha384-PsUw7Xwds7x08Ew3exXhqzbhuEYmA2xnwc8BuD6SEr+UmEHlX8/MCltYEodzWA4u', crossorigin='anonymous')
   body
+    //- script.
+    //-     function onReady(callback) {
+    //-     var intervalId = window.setInterval(function() {
+    //-         if (document.getElementsByTagName('body')[0] !== undefined) {
+    //-         window.clearInterval(intervalId);
+    //-         callback.call(this);
+    //-         }
+    //-     }, 1000);
+    //-     }
+
+    //-     function setVisible(selector, visible) {
+    //-     document.querySelector(selector).style.visibility = visible ? 'visible' : 'hidden';
+    //-     }
+
+    //-     onReady(function() {
+    //-     setVisible('#page', true);
+    //-     setVisible('#loading', false);
+    //-     });
+
+    //- div(id="loading")
+    
     block menu
     block content
