--- a/views/menu.pug
+++ b/views/menu.pug
@@ -1,12 +1,16 @@
 extends layout
 
 block menu 
-    nav(class="navbar navbar-expand-lg navbar-dark bg-dark")
-        a(class="navbar-brand", href="/") SmartCityMap 
-        button(class="navbar-toggler", type="button", data-toggle="collapse", data-target="#navbarNavAltMarkup", aria-controls="navbarNavAltMarkup", aria-expanded="false", aria-label="Toggle navigation")
-            span(class="navbar-toggle-icon")
-        div(class="collapse navbar-collapse", id="navbarNavAltMarkup")
-            div(class="navbar-nav")
-                a(class="nav-item nav-link" href="/admin") Admin
-                if authenticated === true 
-                    a(class="nav-item nav-link" href="/admin/logout") Logout
+    //- div(id="page")
+    nav(class="navbar navbar-expand-sm bg-dark navbar-dark")
+        div(class="container-fluid")
+            a(class="navbar-brand", href="/") SmartCityMap 
+            button(class="navbar-toggler", type="button", data-bs-toggle="collapse", data-bs-target="#collapsibleNavbar")
+                span(class="navbar-toggler-icon")
+            div(class="collapse navbar-collapse", id="collapsibleNavbar")
+                ul(class="navbar-nav")
+                    li(class="nav-item")
+                        a(class="nav-link", href="/admin") Admin
+                    if authenticated === true 
+                        li(class="nav-item")
+                            a(class="nav-link", href="/admin/logout") Logout
