Shown data is chooseable based on the columns of API result; test route and .pug file removed

--- a/views/map.pug
+++ b/views/map.pug
@@ -14,7 +14,5 @@ block content
         script(type='text/javascript').
         
             L.circleMarker([!{item.coordinate}]).addTo(map)
-                .bindPopup(
-                    '<p>Battery: ' + !{item.description} + '</p>'
-                );
+                .bindPopup(!{item.description});
                 
