--- a/views/admin/admin.pug
+++ b/views/admin/admin.pug
@@ -5,15 +5,29 @@ block content
         p Be careful, this is the admin page
         div(class="card")
             div(class="card-body")
-                h4(class="card-title") Map settings 
-                div(class="card-text")
-                    form(action="admin/save", method="post")
-                        div(class="mb-3 mt-3")
-                            label(for="url", class="form-label") API URL:
-                            input(type="url", class="form-control", id="url", name="url", placeholder="https://example.com/api/v1/get", required, pattern="(http|https):\/\/.*", value=`${data.url}`)
-                        div(class="mb-3 mt-3")
-                            label(for="resourceID", class="form-label") Resource ID: 
-                            input(type="text", class="form-control", name="resourceID", id="resourceID", value=`${data.resourceID}`, required)
-                        button(type="submit", class="btn btn-success") Save
+                if step === 0
+                    h4(class="card-title") Map settings (step 1 of 2) 
+                    div(class="card-text")
+                        form(action="admin/save", method="post")
+                            div(class="mb-3 mt-3")
+                                label(for="url", class="form-label") API URL:
+                                input(type="url", class="form-control", id="url", name="url", placeholder="https://example.com/api/v1/get", required, pattern="(http|https):\/\/.*", value=`${mapSettings.url}`)
+                            div(class="mb-3 mt-3")
+                                label(for="resourceID", class="form-label") Resource ID: 
+                                input(type="text", class="form-control", name="resourceID", id="resourceID", value=`${mapSettings.resourceID}`, required)
+                            input(type="hidden", name="step", value=0)
+                            button(type="submit", class="btn btn-primary") Next
+                if step === 1
+                    h4(class="card-title") Map settings (step 2 of 2)
+                    a(href="/admin?config=url", class="btn btn-sm btn-warning") Config the API URL 
+                    div(class="card-text")
+                        form(action="admin/save", method="post")
+                            each field,i in fields 
+                                div(class="mb-3 mt-3")
+                                    div(class="form-check")
+                                        input(class="form-check-input", type="checkbox", name="fields", value=`${field.id}`)
+                                        label(class="form-check-label", for=`${field.id}`) #{field.id} (#{field.type})
+                            input(type="hidden", name="step", value=1)
+                            button(type="submit", class="btn btn-primary") Save
     
         
