URL and resource_id bug fixed, admin page scrollbar bug fixed, fs renamed to fileSystem, unused (commented) parts deleted and reformatted the code a bit

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,12 @@ body {
   padding:0px;
   font:14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+#admin {
+  overflow: auto;
+  display: flex;
+  flex-flow: column;
+  height: 90%;
+}
 a {
   color:#00B7FF;
 }
