--- a/views/admin/admin.pug
+++ b/views/admin/admin.pug
@@ -1,6 +1,6 @@
 extends ../menu 
 block content 
-    div(class="container")
+    div(class="container", id="admin")
         h1 Admin page
         p Be careful, this is the admin page
         div(class="card")
@@ -11,10 +11,10 @@ block content
                         form(action="admin/save", method="post")
                             div(class="mb-3 mt-3")
                                 label(for="url", class="form-label") API URL:
-                                input(type="url", class="form-control", id="url", name="url", placeholder="https://example.com/api/v1/get", required, pattern="(http|https):\/\/.*", value=`${mapSettings.url}`)
+                                input(type="url", class="form-control", id="url", name="url", placeholder="e.g. https://example.com/api/v1/get", required, pattern="(http|https):\/\/.*", value=`${mapSettings.url}`)
                             div(class="mb-3 mt-3")
                                 label(for="resourceID", class="form-label") Resource ID: 
-                                input(type="text", class="form-control", name="resourceID", id="resourceID", value=`${mapSettings.resourceID}`, required)
+                                input(type="text", class="form-control", name="resourceID", id="resourceID", placeholder="e.g. 564f9486-26b1-4e54-8328-bb1113566c86", value=`${mapSettings.resourceID}`, required)
                             input(type="hidden", name="step", value=0)
                             button(type="submit", class="btn btn-primary") Next
                 if step === 1
@@ -23,11 +23,16 @@ block content
                     a(href="/admin?config=query", class="btn btn-sm btn-warning") Config the query 
                     div(class="card-text")
                         form(action="admin/save", method="post")
-                            each field,i in fields 
+                            - for(const field of fields) {
                                 div(class="mb-3 mt-3")
                                     div(class="form-check")
-                                        input(class="form-check-input", type="checkbox", name="fields", value=`${field.id}`)
-                                        label(class="form-check-label", for=`${field.id}`) #{field.id} (#{field.type})
+                                    script.
+                                        if(selectedFields.includes(field))   
+                                            input(class="form-check-input", type="checkbox", name="fields", value=`${field.id}`, checked))
+                                        else 
+                                    input(class="form-check-input", type="checkbox", name="fields", value=`${field.id}`)
+                                    label(class="form-check-label", for=`${field.id}`) #{field.id} (#{field.type})
+                            - }
                             input(type="hidden", name="step", value=1)
                             button(type="submit", class="btn btn-primary") Save
                 if step === 2
@@ -36,10 +41,10 @@ block content
                         form(action="admin/save", method="post")
                             div(class="mb-3 mt-3")
                                 label(for="query", class="form-label") Text contained:
-                                input(type="text", class="form-control", id="query", name="query", placeholder="John Doe", value=`${mapSettings.query}`)
+                                input(type="text", class="form-control", id="query", name="query", placeholder="e.g. John Doe", value=`${mapSettings.query}`)
                             div(class="mb-3 mt-3")
-                                label(for="limit", class="form-label") Query limit (not limited if 0):
-                                input(type="number", class="form-control", name="limit", id="limit", value=`${mapSettings.limit}`, required, min=0, max=9999)
+                                label(for="limit", class="form-label") Query limit (not limited if 0): <b>[May less points will appear on the map because points with null longitudes and latitudes are not displayed]</b>
+                                input(type="number", class="form-control", name="limit", id="limit", value=`${mapSettings.limit}`, placeholder="e.g. 50")
                             input(type="hidden", name="step", value=2)
                             button(type="submit", class="btn btn-primary") Save
     
