--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,6 +19,10 @@ body {
 }
 a {
   color:#00B7FF;
+  margin: 5px;
+}
+input {
+  margin: 5px;
 }
 #leg, #leg_title {
   position:absolute;
@@ -44,22 +48,3 @@ a {
   margin-left:5px;
   top:-1px
 }
-
-/* .page {
-  visibility: hidden;
-  padding: 0 0.5em; 
-}
-
-#loading {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(192, 192, 192, 0.5);
-  background-image: url("https://i.stack.imgur.com/MnyxU.gif");
-  background-repeat: no-repeat;
-  background-position: center;
-} */
