--- a/views/menu.pug
+++ b/views/menu.pug
@@ -13,3 +13,5 @@ block menu
                     if authenticated === true 
                         li(class="nav-item")
                             a(class="nav-link", href="/admin/logout") Logout
+                    li(class="nav-item", id="showHideButton")
+                        a(class="nav-link", href="#") Hide sidebar
