--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,14 +2,34 @@ html, body {
   height: 100%;
 }
 #map {
+  position: relative;
+  float: left;
   height: 100%;
   margin: auto;
+  width: 100%;
+  z-index: 0;
+}
+#otherDiv {
+  position: absolute;
+  right: 0px;
+  width: 20%;
+  height: 100%;
+  background-color: white;
+  overflow-x: scroll;
+}
+#showHideButton {
+  float: right;
+  position: absolute;
+  right: 0;
 }
 body {
   overflow: hidden;
   margin:0;
   padding:0px;
   font:14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+.leaflet-popup-content-wrapper, .card {
+  margin: 5px;
 }
 #admin {
   overflow: auto;
