--- a/views/map.pug
+++ b/views/map.pug
@@ -3,7 +3,7 @@ block content
     
     if `${arraySize}` > 0
         #map
-        script(type='text/javascript').
+        script(type='text/javascript' charset="UTF-8").
             var map = L.map('map').setView([#{items.latMed},#{items.lonMed}], 14);
 
             L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
@@ -12,10 +12,15 @@ block content
                 maxZoom: 21
             }).addTo(map);
         each item in items.points
-            script(type='text/javascript').
+            script(type='text/javascript' charset="UTF-8").
             
                 L.circleMarker([!{item.coordinate}]).addTo(map)
                     .bindPopup(!{item.description});
+        #otherDiv
+            div(class="card")
+                div(class="card-body")
+                    h4(class="card-title") My list 
+                    p(class="card-text") To add places to this list, just double click on its marker on the map. (or you can mark any point to yellow [middle click] or red [right click])
     else
         div(class="container", id="admin")
             h1 No showable points found
