Sample endpoint added to the dropdown on admin page

--- a/views/admin/admin.pug
+++ b/views/admin/admin.pug
@@ -16,11 +16,11 @@ block content
                             div(class="mb-3 mt-3")
                                 label(for="url", class="form-label") API URL:
                                 select(name="url", class="form-control", id="editableSelect", placeholder="Select a sample URL or paste yours")
-                                    option(value="Placeholder") http://smartme-data.unime.it/api/action/datastore_search?resource_id=1a46095a-0c7a-4f5a-8e84-030884e130d8
-                                    option() https://data.smartdublin.ie/api/3/action/datastore_search?resource_id=9496fac5-e4d7-4ae9-a49a-217c7c4e83d9
-                                    option() https://data.smartdublin.ie/api/3/action/datastore_search?resource_id=2dec86ed-76ed-47a3-ae28-646db5c5b965
+                                    option() https://smartcitymap.herokuapp.com/api/sample-endpoint
                                     option() http://localhost:1111/parkingplaces
-                            
+                                    option() http://smartme-data.unime.it/api/action/datastore_search?resource_id=1a46095a-0c7a-4f5a-8e84-030884e130d8
+                                    option() https://data.smartdublin.ie/api/3/action/datastore_search?resource_id=9496fac5-e4d7-4ae9-a49a-217c7c4e83d9
+                                    option() https://data.smartdublin.ie/api/3/action/datastore_search?resource_id=2dec86ed-76ed-47a3-ae28-646db5c5b965                           
                             input(type="hidden", name="step", value=0)
                             button(type="submit", class="btn btn-primary") Next
                 if step === 1
