Uptime added to the menubar

--- a/views/menu.pug
+++ b/views/menu.pug
@@ -13,5 +13,7 @@ block menu
                     if authenticated === true 
                         li(class="nav-item")
                             a(class="nav-link", href="/admin/logout") Logout
+                    li(class="nav-item")
+                        a(class="nav-link", id="upTime")
                     li(class="nav-item", id="showHideButton")
                         a(class="nav-link", href="#") Hide sidebar
