--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,7 @@ html, body {
   background-color: white;
   overflow-x: scroll;
 }
-#showHideButton {
+#showHideButton, #upTime {
   float: right;
   position: absolute;
   right: 0;
