--- a/views/admin/admin.pug
+++ b/views/admin/admin.pug
@@ -28,6 +28,9 @@ block content
                     div(class="alert alert-warning", id="minCheckboxWarning", role="alert") You must select at least 2 fields!
                     a(href="/admin?config=url", class="btn btn-sm btn-warning") Config the API URL 
                     a(href="/admin?config=query", class="btn btn-sm btn-warning") Config the query 
+                    a(href="/admin/exportConfig", class="btn btn-sm btn-info") Export config file 
+                    a(href="/admin/uptime", class="btn btn-sm btn-success") Server uptime 
+
                     div(class="card-text")
                         form(action="admin/save", method="post")
                             - for(const field of fields) {
