--- a/views/menu.pug
+++ b/views/menu.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block menu 
-    nav(class="navbar navbar-expand-sm bg-dark navbar-dark")
+    nav(class="navbar navbar-expand-sm bg-dark navbar-dark", id="menu")
         div(class="container-fluid")
             a(class="navbar-brand", href="/") SmartCityMap 
             button(class="navbar-toggler", type="button", data-bs-toggle="collapse", data-bs-target="#collapsibleNavbar")
