--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,13 +9,16 @@ html, body {
   width: 100%;
   z-index: 0;
 }
+#menu {
+  height: 5%;
+}
 #otherDiv {
   position: absolute;
   right: 0px;
   width: 20%;
-  height: 100%;
+  height: 95%;
   background-color: white;
-  overflow-x: scroll;
+  overflow-y: scroll;
 }
 #showHideButton, #upTime {
   float: right;
@@ -67,4 +70,12 @@ input {
   position:relative;
   margin-left:5px;
   top:-1px
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
 }
