--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.css')
+    link(rel='icon', type='image/png', href='images/icons/favicon.png')
     link(rel='stylesheet', href='https://unpkg.com/leaflet@1.2.0/dist/leaflet.css')
     link(rel='stylesheet', href='https://unpkg.com/leaflet@1.7.1/dist/leaflet.css')
     link(rel='stylesheet', href='https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css')
