--- a/app/views/admin/login.pug
+++ b/app/views/admin/login.pug
@@ -4,7 +4,7 @@ html
         title SmartCityMap login 
         meta(charset='UTF-8')
         meta(name='viewport', content='width=device-width, initial-scale=1')
-        link(rel='icon', type='image/png', href='images/icons/favicon.ico')
+        link(rel='icon', type='image/png', href='images/icons/favicon.png')
         link(rel='stylesheet', type='text/css', href='vendor/bootstrap/css/bootstrap.min.css')
         link(rel='stylesheet', type='text/css', href='fonts/font-awesome-4.7.0/css/font-awesome.min.css')
         link(rel='stylesheet', type='text/css', href='fonts/Linearicons-Free-v1.0.0/icon-font.min.css')
@@ -24,7 +24,7 @@ html
                 div(class='wrap-login100 p-t-190 p-b-30')
                     form(class='login100-form validate-form', method="post", action="admin/auth")
                         div(class='login100-form-avatar')
-                            img(src='images/avatar-01.jpg', alt='AVATAR')
+                            img(src='images/avatar.gif', alt='AVATAR')
 
                         span(class='login100-form-title p-t-20 p-b-45') SmartCityMap login
 
