Fixed checkbox issue (from now 1 selected checkbox is enough due to checking typeof)

--- a/app/views/admin/admin.pug
+++ b/app/views/admin/admin.pug
@@ -30,7 +30,7 @@ block content
                             button(type="submit", class="btn btn-primary") Next
                 if step === 1
                     h4(class="card-title") Map settings (step 2 of 2)
-                    div(class="alert alert-warning", id="minCheckboxWarning", role="alert") You must select at least 2 fields!
+                    div(class="alert alert-warning", id="minCheckboxWarning", role="alert") You must select at least 1 field!
                     a(href="/admin?config=url", class="btn btn-sm btn-warning") Config the API URL 
                     a(href="/admin?config=query", class="btn btn-sm btn-warning") Config the query 
                     a(href="/admin/exportConfig", class="btn btn-sm btn-info") Export config file 
