--- a/app/views/map.pug
+++ b/app/views/map.pug
@@ -4,7 +4,7 @@ block content
     if `${arraySize}` > 0
         #map
         script(type='text/javascript' charset="UTF-8").
-            var map = L.map('map').setView([#{items.latMed},#{items.lonMed}], 14);
+            var map = L.map('map').setView([#{items.latMed},#{items.lonMed}], #{zoom});
 
             L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
                 attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> &copy; <a href="https://carto.com/attributions">CARTO</a>',
